--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,19 +1,19 @@
 pipeline {
-    agent none
+    agent any
     stages {
         stage('Cleaning Stage') {
             steps {
-                    bat mvn clean
+                    bat "mvn clean"
             }
         }
         stage('Testing Stage') {
             steps {
-                    bat  mvn test
+                    bat  "mvn test"
             }
         }
         stage('Packaging Stage') {
              steps {
-                     bat  mvn package
+                     bat  "mvn package"
              }
         }
     }
