--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,5 +16,12 @@ pipeline {
                      sh "mvn package"
              }
         }
+        stage('Result Stage') {
+                     steps {
+                            input("Do you want to capture the results?")
+                            junit'**/target/surefire-reports/TEST-*.xml'
+                            archive 'target/*.jar'
+                     }
+                }
     }
 }
